--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "baybay",
   "version": "0.0.1",
   "private": true,
+  "rnpm": {
+    "assets": [
+      "assets"
+    ]
+  },
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
@@ -12,6 +17,7 @@
     "react-native": "0.40.0",
     "react-native-animatable": "^1.1.0",
     "react-native-audio-toolkit": "^1.0.5",
+    "react-native-billing": "^2.3.0",
     "react-native-fetch-blob": "^0.10.2-beta.6",
     "react-native-in-app-utils": "^5.1.0",
     "react-native-localization": "^0.1.26",
