--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-animatable": "^1.1.0",
     "react-native-audio-toolkit": "^1.0.5",
     "react-native-billing": "^2.3.0",
+    "react-native-code-push": "^1.17.2-beta",
     "react-native-fbsdk": "^0.5.0",
     "react-native-fetch-blob": "^0.10.2-beta.6",
     "react-native-in-app-utils": "^5.1.0",
