--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -90,9 +90,9 @@ android {
     defaultConfig {
         applicationId "com.baybay"
         minSdkVersion 16
-        targetSdkVersion 22
-        versionCode 5
-        versionName "3.0"
+        targetSdkVersion 23
+        versionCode 6
+        versionName "3.1"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -146,7 +146,7 @@ dependencies {
     // compile project(':RNAdMob')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-vector-icons')
-    compile fileTree(dir: "libs", include: ["*.jar"])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     // From node_modules
     compile project(':react-native-audio-toolkit')
     compile 'com.android.support:appcompat-v7:23.4.0'
